--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Harsh14901/netflixparty-server.git"
+    "url": "https://github.com/Harsh14901/All-in-one-party-server"
   }
 }
