--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "./node_modules/.bin/forever index.js"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.13.3",
     "forever": "^0.15.1",
     "lodash": "^3.10.1",
